2010-06-23 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Remove fw(). It's deprecated

2010-06-09 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #6467: Encoding of the Header (thanks to internezzo ag)

2010-05-26 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Manual is reverted
	* Bug #7704: rid is not updated.
	* Bug #7619: deprecated ereg_replace is replaced with str_replace
	* Bug #7472: convert charset of the mail to lowercase 

2010-04-27 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #6795: change deprecated split-function in PHP 5.3

2010-03-18 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Release 2.6.7
	
2010-03-18 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Manual is optimized

2010-03-17 Ivan Kartolo <ivan.kartolo@dkd.de>
	* bug #6882(f): Importer: upload csv failed because the permission is wrong calculated
	
2010-03-12 Ivan Kartolo <ivan.kartolo@dkd.de>
	* bug #6842(f): configuration module won't show up for new user.

2010-03-10 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Release 2.6.6

2010-03-10 Ivan Kartolo <ivan.kartolo@dkd.de>
	* bug #13648(b): empty bullet list in plaintext 
	* bug #13280(b): SysFolder list in the importer module respects the user permission
	* bug #6546(f):	fixed_lgd will be deprecated soon, changed it with fixed_lgd_cs

2010-03-09 Ivan Kartolo <ivan.kartolo@dkd.de>
	* feature #3600: code cleanup. Thanks to Benni Mack
	* bug #5303: fix bug edit link in statistic

2010-03-02 Ivan Kartolo <ivan.kartolo@dkd.de>
	* bug #13349(b): fix the next and back button positioning in IE7
	* bug #6515(f): fix typo
	
2010-02-22 Ivan kartolo <ivan.kartolo@dkd.de>
	* bug #5772(f): removed getListOfBackendModules, since it will be deprecated soon, and direct mail doesn't need it anyway
	* bug: fixed pointer (issue with php 5.3)
	 
2010-01-13 Ivan Kartolo <ivan.kartolo@dkd.de>
	* bug #5733(f): recipRow as hook parameter
	
2009-12-13 Ivan Kartolo <ivan.kartolo@dkd.de>
	* bug #5342(f): fixed uninitialized array
	* bug #5477(f): quoted admin email
	* bug #5698(f): fixed link to edit page